@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.4 2012/05/02 12:34:56 obache Exp $
-
-SHA1 (tweetstream-1.1.5.gem) = 028047fabd459737512ad38e7aab0942e636b731
-RMD160 (tweetstream-1.1.5.gem) = a1c8ccb0ac10ab88c524eeb58b372122f2635fb7
-Size (tweetstream-1.1.5.gem) = 22528 bytes
